Change domain name to itsacoyote.design

--- a/_plugins/hexo-generator-google-amp/amp-template.html
+++ b/_plugins/hexo-generator-google-amp/amp-template.html
@@ -24,7 +24,7 @@
         "name": "Itsacoyote Workshop",
         "logo": {
             "@type": "ImageObject",
-            "url": "http://images.itsacoyoteworkshop.com/site_assets/itsacoyoteworkshop-logo.png",
+            "url": "http://itsacoyote.design/site_assets/itsacoyoteworkshop-logo.png",
             "width": 290,
             "height": 60
             }
@@ -109,12 +109,12 @@
 
 <body>
     <div class="header">
-        <a href="http://www.itsacoyoteworkshop.com">
-            <amp-img src="http://images.itsacoyoteworkshop.com/site_assets/itsacoyoteworkshop-logo.png" width="315" height="65"></amp-img>
+        <a href="http://www.itsacoyote.design">
+            <amp-img src="http://itsacoyote.design/site_assets/itsacoyoteworkshop-logo.png" width="315" height="65"></amp-img>
         </a>
     </div>
     <div class="content">
-        {% if post.cover_index.length %}<amp-img src="http://images.itsacoyoteworkshop.com/posts/
+        {% if post.cover_index.length %}<amp-img src="http://itsacoyote.design/posts/
 {{post.cover_index}}" layout="responsive" width="558" height="200"></amp-img>{% endif %}
         <h1>{{post.title}}</h1>
         {{ post.content | safe}}
